<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="toolbar_title" translatable="false">I\'m Hungry</string>
    <string name="toolbar_title_workmates">Available workmates</string>
    <string name="title_search">SEARCH</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"You have received a notification"</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">339989790592056</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb339989790592056</string>

    <string name="title_map" translatable="false">Map View</string>
    <string name="title_list" translatable="false">List View</string>
    <string name="title_workmates">Workmates</string>
    <string name="title_your_lunch">YOUR LUNCH</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_logout">LOGOUT</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="photo_restaurant">Photo restaurant</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">You must log in!</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error has occurred&#8230;</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="desc_restaurant">Photo restaurant</string>
    <string name="action_call">CALL</string>
    <string name="action_website">WEBSITE</string>
    <string name="action_like">LIKE</string>
    <string name="detail_floating_action_button">Detail floating action button</string>
    <string name="workmate_photo">Workmate photo</string>
    <string name="info_no_email_found">Info no email found</string>
    <string name="info_no_username_found">Info no username found</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_chat_activity">Chats de discussions</string>
    <string name="text_input_title_chat_activity">Composer votre message</string>
    <string name="button_title_chat_activity">SEND</string>
    <string name="text_view_chat_error">There are currently no messages in this discussion thread &#8230;</string>
    <string name="popup_title_permission_files_access">This app needs permission to work.</string>
    <string name="toast_title_no_image_chosen">No image chosen&#8230;</string>

    <!-- MAP -->
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="no_location_detected">No location detected</string>
    <string name="activity_chat_image_chosen_preview">Image chosen preview</string>
    <string name="send_btn">Send btn</string>
    <string name="placeholder_message">Placeholder message</string>
    <string name="user_avatar">User Avatar</string>
    <string name="messages_header">Messages</string>
    <string name="tools_address">French restaurant - 12 rue du Faubourg Poissonière</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="saved_theme_mode_key">DARK_MODE</string>
</resources>